Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-4447

C++ Client can hang during connect if heartbeat disconnect fires

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.18, 0.19, 0.20
    • 0.21
    • C++ Client
    • None
    • Linux

    Description

      There is a race condition since r1357827 which can hang a c++ client if heartbeat disconnect fires on the client which can cause a TimerTask to be cancelled during a Timer callback (as part of a Connection delete) which leads to a deadlock as noted in the comments for that checkin.

      Attachments

        Activity

          People

            astitcher Andrew Stitcher
            astitcher Andrew Stitcher
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: