QPID-4447: C++ Client can hang during connect if heartbeat disconnect fires

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1411750 13f79535-47bb-0310-9956-ffa450edef68